--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    //bomb后端云
+    useLibrary 'org.apache.http.legacy'
+
 }
 
 dependencies {
@@ -33,6 +36,16 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     //TabLayout
     implementation 'com.android.support:design:28.0.0-alpha1'
+
+    //bomb后端云
+    implementation 'cn.bmob.android:bmob-sdk:3.6.9'
+    implementation "io.reactivex.rxjava2:rxjava:2.2.2"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'com.squareup.okio:okio:2.1.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
+    implementation 'cn.bmob.android:http-legacy:1.0'
+
 
 
 
