Dialog Test Passed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,16 +29,21 @@
             android:name="cn.bmob.v3.util.BmobContentProvider"
             android:authorities="com.zhuodp.graduationproject.BmobContentProvider">
         </provider>
+
+
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+
+        <activity android:name=".debug.DebugActivity"/>
+
     </application>
 
 </manifest>
