--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,10 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
     implementation 'cn.bmob.android:http-legacy:1.0'
 
+    //Banner框架
+    implementation 'com.youth.banner:banner:1.4.10'
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 
 
 
