集成ijkPlayer作为视频播放框架，在DebugActivity中有简单测试demo，后续尝试进行UI及其他功能定制

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,18 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:3.7.0'
 
+    //ijkplayer
+    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.8'
 
+    //以下为ijkPlayer为支持更多视频文件格式，可选的导入项
+    //Other ABIs: optional
+    implementation 'tv.danmaku.ijk.media:ijkplayer-armv5:0.8.8'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-arm64:0.8.8'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-x86:0.8.8'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-x86_64:0.8.8'
+
+    //ExoPlayer as IMediaPlayer: optional, experimental
+    implementation 'tv.danmaku.ijk.media:ijkplayer-exo:0.8.8'
 
 }
