--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        //在继承ijkPlayer时添加的
+        maven {url "https://jitpack.io"}
         //Bmob的maven仓库地址--必填
         maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
     }
