--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.zhuodp.graduationproject"
-        minSdkVersion 24
+        minSdkVersion 25
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -16,6 +16,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
+
     //bomb后端云
     useLibrary 'org.apache.http.legacy'
 
@@ -54,6 +60,7 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:3.7.0'
 
+/*
     //ijkplayer
     implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
     implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.8'
@@ -68,7 +75,8 @@ dependencies {
     //ExoPlayer as IMediaPlayer: optional, experimental
     implementation 'tv.danmaku.ijk.media:ijkplayer-exo:0.8.8'
 
+*/
 
     //基于ijk的封装库
-    implementation 'com.shuyu:GSYVideoPlayer:7.0.0-beta1'
+    implementation 'com.shuyu:GSYVideoPlayer:6.0.3'
 }
