视频测试完成，代码结构待优化

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,11 @@
 
         <activity android:name=".debug.DebugActivity"/>
 
-        <activity android:name=".activity.VideoPlayerActivity"/>
+        <activity
+            android:name=".activity.VideoPlayerActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Design.Light.NoActionBar"/>
 
     </application>
 
