--- a/dialogs/src/main/AndroidManifest.xml
+++ b/dialogs/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         <activity android:name=".activity.FeedBackDialog"
             android:theme="@style/style_dialog_activity"/>
 
+        <activity android:name=".activity.AskForLoginActivity"
+            android:theme="@style/style_dialog_activity"/>
+
 
     </application>
 
