--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,10 @@
             android:theme="@style/Theme.Design.Light.NoActionBar"
             />
 
+        <activity android:name=".activity.MovieListActivity"
+            android:theme="@style/Theme.Design.Light.NoActionBar"
+            />
+
     </application>
 
 </manifest>
