1.开通了收藏页 2.在收藏页运用了collaspingLayout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,9 @@
             android:theme="@style/Theme.Design.Light.NoActionBar"
             />
 
+        <activity android:name=".activity.CollectionActivity"
+            android:theme="@style/CollapsingTheme"/>
+
     </application>
 
 </manifest>
