1.完成了设置页的所有逻辑 2.初步完成了历史纪录功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,9 @@
         <activity android:name=".activity.CollectionActivity"
             android:theme="@style/CollapsingTheme"/>
 
+        <activity android:name=".activity.UserPlayHistoryActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
     </application>
 
 </manifest>
