add mvp package,maybe rejust the project to mvp style later

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,9 @@
         <activity android:name=".activity.UserPlayHistoryActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
 
+        <activity android:name=".debug.TestMvpActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
     </application>
 
 </manifest>
